XWATCH-126: Too long feed names prevent access to the feed actions * styled feed tree to have fixed sizes for the feed items so that actions stay visible no matter the size of the title * removed the space reserved for expand icons of the feed tree items to increase feed title space
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-products/xwiki-watch/trunk@10472 f329d543-caf0-0310-9063-dda96c69346f

--- a/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
+++ b/gwt/src/main/java/com/xpn/xwiki/watch/public/Watch.css
@@ -229,6 +229,11 @@ div.watch-feedtree-group {
     width: 160px;
 }
 
+div.watch-feedtree-feed {
+    display: block;
+    width: 170px;
+}
+
 .watch-feedtree-feedaction, .watch-feedtree-groupaction, .watch-keyword-keywordaction {
 	float: right;
 	padding-left: 0.5em;
@@ -249,6 +254,10 @@ div.watch-feedtree-deletefeed, div.watch-feedtree-deletegroup, div.watch-keyword
 
 #Watch div.watch-main div.watch-feedtree div.watch-feedtree-groups div span div table tbody tr td  {
 	white-space: normal;
+}
+
+#Watch div.watch-main div.watch-feedtree div.watch-feedtree-groups div span div table tbody tr td:first-child  {
+	display: none;
 }
 
 
